add openapi options for documentation
