# server/api/transactions.pb.gw.go
@@ -134,7 +134,7 @@ func local_request_TransactionsService_List_0(ctx context.Context, marshaler run
 }
 
 func request_TransactionsService_Create_0(ctx context.Context, marshaler runtime.Marshaler, client TransactionsServiceClient, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq Transaction
+	var protoReq TransactionCreate
 	var metadata runtime.ServerMetadata
 
 	newReader, berr := utilities.IOReaderFactory(req.Body)
@@ -152,15 +152,15 @@ func request_TransactionsService_Create_0(ctx context.Context, marshaler runtime
 		_   = err
 	)
 
-	val, ok = pathParams["account.id"]
+	val, ok = pathParams["account_id"]
 	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "account.id")
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "account_id")
 	}
 
-	err = runtime.PopulateFieldFromPath(&protoReq, "account.id", val)
+	protoReq.AccountId, err = runtime.Int32(val)
 
 	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "account.id", err)
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "account_id", err)
 	}
 
 	msg, err := client.Create(ctx, &protoReq, grpc.Header(&metadata.HeaderMD), grpc.Trailer(&metadata.TrailerMD))
@@ -169,7 +169,7 @@ func request_TransactionsService_Create_0(ctx context.Context, marshaler runtime
 }
 
 func local_request_TransactionsService_Create_0(ctx context.Context, marshaler runtime.Marshaler, server TransactionsServiceServer, req *http.Request, pathParams map[string]string) (proto.Message, runtime.ServerMetadata, error) {
-	var protoReq Transaction
+	var protoReq TransactionCreate
 	var metadata runtime.ServerMetadata
 
 	newReader, berr := utilities.IOReaderFactory(req.Body)
@@ -187,15 +187,15 @@ func local_request_TransactionsService_Create_0(ctx context.Context, marshaler r
 		_   = err
 	)
 
-	val, ok = pathParams["account.id"]
+	val, ok = pathParams["account_id"]
 	if !ok {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "account.id")
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "missing parameter %s", "account_id")
 	}
 
-	err = runtime.PopulateFieldFromPath(&protoReq, "account.id", val)
+	protoReq.AccountId, err = runtime.Int32(val)
 
 	if err != nil {
-		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "account.id", err)
+		return nil, metadata, status.Errorf(codes.InvalidArgument, "type mismatch, parameter: %s, error: %v", "account_id", err)
 	}
 
 	msg, err := server.Create(ctx, &protoReq)
@@ -493,7 +493,7 @@ var (
 
 	pattern_TransactionsService_List_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"v1", "account", "account_id", "transactions"}, "", runtime.AssumeColonVerbOpt(true)))
 
-	pattern_TransactionsService_Create_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"v1", "account", "account.id", "transactions"}, "", runtime.AssumeColonVerbOpt(true)))
+	pattern_TransactionsService_Create_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3}, []string{"v1", "account", "account_id", "transactions"}, "", runtime.AssumeColonVerbOpt(true)))
 
 	pattern_TransactionsService_Get_0 = runtime.MustPattern(runtime.NewPattern(1, []int{2, 0, 2, 1, 1, 0, 4, 1, 5, 2, 2, 3, 1, 0, 4, 1, 5, 4}, []string{"v1", "account", "account_id", "transactions", "id"}, "", runtime.AssumeColonVerbOpt(true)))
 )
